# dLANG

./: README.md  RELEASES.md
mly/: .source-commit  Cargo.toml  MLY_PLAN.md  README.md
mly/crates/mly-ane/: Cargo.toml
mly/crates/mly-core/: Cargo.toml
mly/crates/mly-cpu/: Cargo.toml
mly/crates/mly-dsl/: Cargo.toml
mly/crates/mly-metal/: Cargo.toml
mly/crates/mly-mlx/: Cargo.toml
mly/crates/mly-runtime/: Cargo.toml
mly/crates/mly-swift/: Cargo.toml
mly/crates/mly-verify/: Cargo.toml
rustc-index-verified/: .source-commit  Cargo.dropin.toml  Cargo.toml  MANAGER_AUDIT_2026-01-05.md  README.md  STATUS_FOR_TRUST.md  rust-toolchain.toml
rustc-index-verified/docs/: INTEGRATION_GUIDE.md  VERIFICATION_STATUS.md  VERIFICATION_TEMPLATE.md
rustc-index-verified/docs/archive/: ICE_BUG_REPORT_2026-01-02.md  INCOMING_L3_FIX_2026-01-02.md  MANAGER_AUDIT_2026-01-03.md  MANAGER_AUDIT_2026-01-03_v2.md  RESPONSE_TO_TRUST_2026-01-02.md
rustc-index-verified/scripts/: compare_upstream.sh  test_dropin.sh  trust-workspace-wrapper.sh  trust-wrapper.sh
rustc-index-verified/src/: bit_set.rs  idx.rs  interval.rs  lib.rs  slice.rs  vec.rs
rustc-index-verified/src/bit_set/: tests.rs
rustc-index-verified/src/interval/: tests.rs
rustc-index-verified/src/vec/: tests.rs
rustc-index-verified/tests/: dropin_compatibility.rs  solver_limitations.rs
tC/: .source-commit  Cargo.toml  README.md  deploy_projects_md.sh
tC/docs/: DESIGN.md
tC/src/: error.rs  lib.rs  main.rs
tC/src/ffi/: mod.rs  rust.rs  swift.rs
tC/src/parser/: acsl.rs  clang.rs  mod.rs
tC/src/vc_gen/: c_to_vcir.rs  mod.rs
tRust/: .gitmodules  BACKLOG.md  CONTRIBUTING.md  Cargo.toml  EVOLUTION.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP_ARCHIVE.md  TLA2_RESPONSE.md  TRUST_MODEL.md  VALIDATION_PLAN.md  VISION.md  Z4_INTEGRATION_FEEDBACK.md  Z4_REQUIREMENTS.md  rebuild.sh  run_ab_tests.sh  run_runtime_tests.sh  run_tests.sh  x  x.py
tRust/.cargo/: config.toml
tRust/.github/workflows/: ci.yml
tRust/backends/crown/: Cargo.toml
tRust/backends/z3/: Cargo.toml
tRust/backends/z4/: Cargo.toml
tRust/benchmarks/: README.md  complex_5spec.rs  complex_multi.rs  run_benchmarks.sh  simple_1spec.rs  simple_3spec.rs
tRust/book/: .gitignore  book.toml
tRust/book/src/: SUMMARY.md  introduction.md
tRust/compiler/rustc_vc/: Cargo.toml
tRust/crates/tla-extract/: Cargo.toml
tRust/docs/: ARCHITECTURE_INTENT.md  CONTRACTS_COMPATIBILITY.md  CONTRACTS_MERGER_DESIGN.md  FALSE_POSITIVES.md  GETTING_STARTED.md  KANI_FAST_INTEGRATION.md  LIMITATIONS.md  MIGRATION_GUIDE.md  SPEC_PATTERNS.md  VERIFICATION_SEMANTICS.md  VERIFIED_COMPILER_VISION.md  WHY_TRUST_BEATS_KANI.md  WIRING_VERIFICATION.md
tRust/docs/design/: AUDIT_OVERVIEW.md  COMPILER_COMPARISON.md  NUCLEAR_GRADE_ROADMAP.md  PHASE_N2_LEAN5_SETUP.md  TLA2_PERFORMANCE_BENCHMARKS.md  TLA2_STATEMACHINE_SPEC.md  UPSTREAM_TRACKING_SYSTEM.md  VERIFICATION_SEMANTICS.md
tRust/docs/manager/: DESIGN_AUTO_VERIFICATION.md
tRust/docs/tswift/: FFI_COMPILATION_MODES.md  FFI_VERIFICATION.md  ROADMAP_UNIFIED.md  VERIFICATION_BY_DEFAULT.md  WINDOWS_BINDINGS.md
tRust/editors/vscode/: README.md  package.json  tsconfig.json
tRust/examples/: abs_bounds_test.rs  addition_bounds_test.rs  additional_option_result_test.rs  anomaly_test.rs  arith_precond_test.rs  arith_spec_test.rs  array_index_postcondition_test.rs  array_index_spec_test.rs  array_len_type_test.rs  array_test.rs  assumed_trust_test.rs  async_chain_test.rs  async_state_machine_test.rs  atomic_test.rs  auto_pure_method_test.rs  binaryheap_extended_test.rs  binaryheap_retain_test.rs  binaryheap_test.rs  bitand_mask_signed_ok_test.rs  bitand_mask_signed_unsound_test.rs  bitand_mask_test.rs  bitnot_bounds_test.rs  bitor_array_test.rs  bitor_bounds_test.rs  bitwise_test.rs  bitxor_bounds_test.rs  borrow_semantics_test.rs  bounded_sub_const_test.rs  bounds_test.rs  box_encoding_test.rs  branch_precond_test.rs  cast_alias_bounds_test.rs  cell_refcell_test.rs  chained_bounds_test.rs  char_test.rs  chc_loop_test.rs  chc_struct_field_test.rs  checked_add_bounds_test.rs  checked_div_bounds_test.rs  checked_mul_bounds_test.rs  (+213 more)
tRust/examples/cross_crate_chain_crate_case/: dep.rs  main.rs
tRust/examples/cross_crate_disproven_crate_case/: dep.rs
tRust/examples/cross_crate_lockfile_crate_case/: dep.rs  main.rs
tRust/examples/cross_crate_postcond_crate_case/: main.rs
tRust/examples/cross_crate_postcond_fail_crate_case/: dep.rs  main.rs
tRust/examples/cross_crate_precond_fail_crate_case/: main.rs
tRust/examples/cross_crate_trust_level_crate_case/: dep.rs  main.rs
tRust/examples/cross_language_demo/: README.md  backend.rs  contracts.json  frontend.ts
tRust/examples/cross_language_wiring/: README.md  backend.rs  contracts.json  frontend.ts
tRust/examples/models/: simple_classifier.json
tRust/examples/name_collision_test/: inner.rs  mod.rs
tRust/examples/nested_mod_test/: inner.rs  mod.rs
tRust/examples/neural_networks/: verified_classifier.rs
tRust/examples/real_validation/: README.md  base64.rs  hex.rs  subtle.rs
tRust/examples/real_world/: verified_binary_search.rs  verified_stack.rs
tRust/examples/sorting/: Cargo.toml
tRust/examples/upstream_contracts/: README.md  elide_mir_test.rs  upstream_contracts_test.rs
tRust/proofs/lean5/: AUDIT_README.md  MirSemantics.lean  README.md  lake-manifest.json  lakefile.lean
tRust/scripts/: check_submodules_pushed.sh  install-hooks.sh  make_audit_bundle.sh  pre-commit.hook  upstream_sync.sh
tRust/specs/: README.md  spec_format.md
tRust/specs/community/: regex.toml  serde_json.toml
tRust/tests/: run_tla_extract_test.sh  tla_extract_integration_test.rs
tRust/tests/fixtures/: simple_linear.onnx  test_mlp.onnx
tRust/tools/: test_smt_query.sh
tRust/tools/ts-contract-checker/: README.md  package-lock.json  package.json
tRust/tools/upstream-tracker/: Cargo.toml
tRust/tools/validation/: run_level0_build.sh  run_level2_crate_compat.sh  (+8 more)
tRust/trust_macros/: Cargo.toml
tRust/vc_ir/: Cargo.toml
tSwift/vc-ir-swift/: Cargo.toml  README.md  build.rs
(+493 files in other folders)
