[package]
name = "trust_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for tRust verification specifications"
readme = "../README.md"
keywords = ["verification", "rust", "compiler"]
categories = ["development-tools", "compilers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
