[package]
name = "mly-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core tensor types for Tensor Forge - AI-native ML framework"

[dependencies]
ndarray = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
