[package]
name = "trust_z4"
version = "0.1.0"
edition = "2021"
description = "Z4 SMT solver backend for tRust (pure Rust)"
license = "MIT OR Apache-2.0"
repository.workspace = true
readme = "../../README.md"
keywords = ["verification", "rust", "compiler"]
categories = ["development-tools", "compilers"]

[dependencies]
vc_ir = { path = "../../vc_ir" }
z4 = { path = "../../../z4/crates/z4" }
z4-dpll = { path = "../../../z4/crates/z4-dpll" }
z4-frontend = { path = "../../../z4/crates/z4-frontend" }
z4-core = { path = "../../../z4/crates/z4-core" }

[dev-dependencies]
# Test helpers
