[package]
name = "trust-upstream"
version = "0.1.0"
edition = "2021"
description = "tRust upstream Rust tracking and sync tool"
license = "MIT OR Apache-2.0"
repository.workspace = true
readme = "../../README.md"
keywords = ["verification", "rust", "compiler"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "trust-upstream"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# JSON/TOML parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Git operations
git2 = "0.18"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
semver = "1.0"
regex = "1.10"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.9"
